# styles

./: Ensembles.rgd  README.md  meson.build
StyleFiles/: EDM@Dance_Pop.enstl
rg/: EDM@Dance_Pop.rg  EDM@Reggaeton.rg  EDM@Reggaeton2.rg
src/: Config.vala.in  StyleRepository.vala  meson.build
